<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="122dp"
        android:text="@string/CameraView"
        android:gravity="center_horizontal"
        android:textColor="#202A45"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPersonName"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:src ="@drawable/camera"
        android:contentDescription="@string/Clothing" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        android:text="Please take a picture"
        android:textColor="@color/red"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="230dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/seasonType"
        android:textColor="#202A45"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginBottom="236dp"
        android:text="@string/Winter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="236dp"
        android:text="@string/Fall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="236dp"
        android:text="@string/Spring"
        android:textColor="#202A45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="190dp"
        android:layout_marginBottom="236dp"
        android:text="@string/Summer"
        android:textColor="#202A45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="167dp"
        android:layout_height="62dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/Type"
        app:layout_constraintStart_toEndOf="@id/editTextTextPersonName"
        app:layout_constraintBottom_toTopOf="@id/checkBox3"
        />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/textInputLayout"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

    <!--        android:layout_width="167dp"-->
    <!--        android:layout_height="62dp"-->
    <!--        android:layout_marginTop="364dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:hint="@string/select"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <AutoCompleteTextView-->
    <!--            android:id="@+id/clothing_type_select"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="53dp"-->
    <!--            android:inputType="none"-->
    <!--            android:textColor="#202A45"-->
    <!--            android:hint="jeans"/>-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="304dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/clothingType"
        android:textColor="#202A45"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="170dp"
        android:text="@string/patternedTF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="160dp"
        android:ems="10"
        android:text="@string/colorType"
        android:textColor="#202A45"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""/>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayoutTwo"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

<!--        android:layout_width="146dp"-->
<!--        android:layout_height="67dp"-->
<!--        android:layout_marginTop="520dp"-->
<!--        android:layout_marginEnd="168dp"-->
<!--        android:hint="@string/select"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/color_select"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:inputType="none"-->
<!--            android:textColorHint="#757575" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:contentDescription="@string/Type"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox3"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="58dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#FFFC99"
        android:text="@string/saveButton"
        android:textColor="#202A45"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".MainActivity"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/afg_nav_bar"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>